GNOME Bugzilla – Bug 762665
Error loading logs entries
Last modified: 2016-02-25 09:58:49 UTC
Created attachment 322334 [details] Logs cannot load log entries normally Due to my commits yesterday(Commit ce3b9a7bd27c599f2d7a918c734e34d9bd5e14bc and Commit 13cb18f36fd5c4cd9e570bc071f9079659bf6450). Logs cannot load log entries normally. See it in the attached picture. I found that if a log entry doesn't have PRIORITY field, it'll stop the loading process right there. My solution would be remove GError while using gl_journal_get_data to fetch PRIORITY field. Because lots of log entries don't PRIORITY field, there will be a lot of debugging information saying that unable to fetch PRIORITY field, which is not that useful.
Created attachment 322337 [details] [review] debug-priority.patch Use g_debug instead of g_warning as debug information for fetching PRIORITY field. And do not return NULL as the return value of _gl_journal_query_entry.
Review of attachment 322337 [details] [review]: ::: src/gl-journal.c @@ +438,3 @@ if (error != NULL) { + g_debug ("%s", error->message); This needs a comment as to why the priority is different from other fields (in other words, that some entries do not have the priority set, which is expected).
Created attachment 322344 [details] [review] debug-priority.patch Comment added to the patch
Review of attachment 322344 [details] [review]: Sure, looks fine.
Pused to master as commit 9600be1f3911f994d40f5e0de78791c842a42978