Do not return NULL if error fetching PRIORITY

Use g_debug instead of g_warning as debug information for fetching
PRIORITY field. And do not return NULL as the return value of
_gl_journal_query_entry while error fetching PRIORITY field.

https://bugzilla.gnome.org/show_bug.cgi?id=762665